--- a/style.css
+++ b/style.css
@@ -15,8 +15,9 @@ body, html {
     flex-direction: column;
 
     height: 200px;
-    width: 400px;
+    width: 450px;
 
+    padding: 0px 0px 0px 10px;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
