--- a/style.css
+++ b/style.css
@@ -67,3 +67,9 @@ body, html {
     color: #FF6EB4;
     text-shadow: 1px 1px #000;
 }
+
+@media(max-width: 376px){
+    .card{
+        width: 350px;
+    }
+}
