--- a/estilo.css
+++ b/estilo.css
@@ -7,6 +7,10 @@ body, html {
     background: linear-gradient(rgb(0, 0, 161), rgb(0, 0, 51)) no-repeat;
 }
 
+p{
+    font-size: 1.1em;
+}
+
 #principal {
     display: flex;
     justify-content: center;
@@ -14,12 +18,13 @@ body, html {
     flex-direction: column;
     text-align: center;
 
-    height: 600px;
+    height: 70%;
     width: 450px;
 
     animation-duration: 5s;
     animation-name: expandir;
 
+    padding: 0px 10px 0px 10px;
     background: white;
     border-radius: 8px;
     box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
@@ -27,10 +32,10 @@ body, html {
 
 @keyframes expandir {
     from {
-        height: 100px;
+        height: 10%;
     }
   
     to {
-        height: 600px;
+        height: 70%;
     }
   }
